[gd_scene load_steps=7 format=3 uid="uid://bk7r2jwx6mddl"]

[ext_resource type="Script" path="res://Multiplayer/multiplayer_interface.gd" id="1_cv5sd"]
[ext_resource type="Texture2D" uid="uid://dl166coqj3cky" path="res://Multiplayer/Blur_background.png" id="1_su0dn"]
[ext_resource type="PackedScene" uid="uid://d3m4xsna6e4p4" path="res://Multiplayer/WebSocket.tscn" id="2_4rfff"]
[ext_resource type="Script" path="res://Multiplayer/TablaPuntajes.gd" id="4_5lkrx"]
[ext_resource type="Script" path="res://Multiplayer/LineEdit.gd" id="4_dqlj1"]
[ext_resource type="Texture2D" uid="uid://br00qrtbmp7iy" path="res://Resources/Termial_Infection_logo_multiplayer.png" id="4_j3u31"]

[node name="MultiplayerInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cv5sd")

[node name="WebSocket" parent="." instance=ExtResource("2_4rfff")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(634, 361)
texture = ExtResource("1_su0dn")
metadata/_edit_lock_ = true

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(370, 193)
scale = Vector2(0.339754, 0.404873)
texture = ExtResource("4_j3u31")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Back" type="Button" parent="CanvasLayer"]
offset_right = 8.0
offset_bottom = 8.0
text = "BACK
"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_left = 285.0
offset_top = 380.0
offset_right = 448.0
offset_bottom = 481.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Ingrese Nick"
alignment = 1
max_length = 10
context_menu_enabled = false
virtual_keyboard_enabled = false
drag_and_drop_selection_enabled = false
script = ExtResource("4_dqlj1")

[node name="Play_button" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "JUGAR"

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "CHAT
"

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -353.0
offset_top = -8.0
offset_right = -198.0
offset_bottom = 42.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "TABLA DE PUNTAJES"

[node name="refresh" type="Button" parent="CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Nombre"

[node name="Label3" type="Label" parent="CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Puntaje"

[node name="TablaPuntajes" type="GridContainer" parent="CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2
script = ExtResource("4_5lkrx")

[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="CanvasLayer/PanelContainer/VBoxContainer/LineEdit" to="CanvasLayer/PanelContainer/VBoxContainer/LineEdit" method="_on_text_changed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer/refresh" to="WebSocket" method="_on_refresh_pressed"]
